css bug fixed for overlapping close and next media button on lightbox

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -408,3 +408,10 @@
     color : red;
 }
 
+button.mfp-arrow,button.mfp-arrow:active {
+    margin-top:-30px;
+}
+
+button.mfp-close {
+ margin-top:-10px;  
+}
